# Ethan

./: .appveyor.yml  .clang-format  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  EthanConfigs.cmake  Jenkinsfile  LICENSE  README.md  README.org  TODO.org  appveyor.yml  build.py  ethan.cpp  ethan.h  project.4coder  tasks.ini
.github/ISSUE_TEMPLATE/: -bug--bug-report.md  -feature--a-feature-request.md  bug_report.md  feature_request.md
CMake/: EthanConfigs.cmake
CMakeScripts/: EthanConfigs.cmake  EthanSetup.cmake
EthanEditor/: CMakeLists.txt  EntryPoint.c  EntryPoint.h  EthanEditor.cpp  EthanEditor.hpp
EthanEngine/: BasicDefines.h  CMakeLists.txt  Ethan.hpp  EthanPCH.hpp
EthanEngine/Core/: Application.cpp  Application.hpp  Core.hpp  EApplication.cpp  EApplication.hpp  ELogger.cpp  ELogger.hpp  Event.hpp  Logger.cpp  Logger.hpp  Logging.c  Logging.h
EthanEngine/Utilities/: UtilString.hpp  Utilities.hpp
ThirdParties/: CMakeLists.txt
build_files/cmake/: macros.cmake
build_files/scripts/: build_mac.sh  build_unix.sh  build_win.bat  build_win_mingw.bat  clean_mac.sh  clean_unix.sh  clean_win.bat  debug_mac.sh  generate_mingw.bat  generate_vs.bat
code/: ethan_audio.h  ethan_base.h  ethan_config.h  ethan_main.h
res/shaders/: base2D.glsl  batch2D.glsl  (+1 more)
src/: CMakeLists.txt  ethan.h
src/core/: CMakeLists.txt
src/core/include/ethan/: core.h  core_pch.h
src/core/include/ethan/core/: app.h  application.h  core.h  event.h  main.h  window.h
src/core/include/ethan/core/graphic/: buffers.h  camera.h  graphic_context.h  renderer.h  shader.h  texture.h  vertex_array.h  window.h
src/core/include/ethan/core/graphic/api/: buffers.h  frame_buffer.h  shader.h  texture.h  vertex_array.h  window.h
src/core/include/ethan/core/graphic/camera/: camera.h  camera_controller.h
src/core/include/ethan/core/graphic/mesh/: mesh.h
src/core/include/ethan/core/graphic/renderer/: renderer.h  renderer2D.h
src/core/include/ethan/core/graphic/sprite/: sprite.h
src/core/include/ethan/core/input/: input.h  keycode.h  keys.h  mouse.h
src/core/include/ethan/core/main/: application.h  config.h  event.h  gui.h  main.h  process.h
src/core/include/ethan/core/scene/: scene.h
src/core/src/: app.cpp  application.cpp  event.cpp  main.cpp  window.cpp
src/core/src/graphic/: buffers.cpp  camera.cpp  graphic_context.cpp  renderer.cpp  shader.cpp  texture.cpp  vertex_array.cpp  window.cpp
src/core/src/graphic/api/: buffers.cpp  frame_buffer.cpp  graphic_context.cpp  shader.cpp  texture.cpp  vertex_array.cpp  window.cpp
src/core/src/graphic/camera/: camera.cpp  camera_controller.cpp
src/core/src/graphic/mesh/: mesh.cpp
src/core/src/graphic/renderer/: renderer.cpp  renderer2D.cpp
src/core/src/graphic/sprite/: sprite.cpp
src/core/src/input/: input.cpp  keys.cpp  mouse.cpp
src/core/src/main/: application.cpp  event.cpp  gui.cpp  main.cpp  process.cpp
src/core/src/scene/: scene.cpp
src/ecs/: CMakeLists.txt
src/ecs/include/ethan/: ecs.h
src/ecs/include/ethan/ecs/component/: component.h
src/ecs/include/ethan/ecs/entity/: entity.h  entity_manager.h
src/ecs/include/ethan/ecs/system/: system.h
src/ecs/src/component/: component.cpp
src/ecs/src/entity/: entity.cpp  entity_manager.cpp
src/ecs/src/system/: system.cpp
src/editor/: CMakeLists.txt
src/editor/include/ethan/: editor.h
src/editor/include/ethan/editor/: editor_process.h
src/editor/include/ethan/editor/ui/: console_panel.h  editor_panel.h  scene_panel.h
src/editor/src/: editor_process.cpp
src/editor/src/ui/: console_panel.cpp  editor_panel.cpp  scene_panel.cpp
src/ethan/: ethan.cpp  ethan.h
src/libs/: CMakeLists.txt
src/libs/dx11/: CMakeLists.txt
src/libs/metal/: CMakeLists.txt
src/libs/opengl/: CMakeLists.txt
src/libs/opengl/include/ethan/opengl/: gl_assert.h  gl_buffers.h  gl_context.h  gl_frame_buffer.h  gl_imgui.h  gl_input.h  gl_renderer.h  gl_shader.h  gl_texture.h  gl_vertexarray.h  gl_window.h
src/libs/opengl/src/: gl_assert.cpp  gl_buffers.cpp  gl_context.cpp  gl_context.h  gl_frame_buffer.cpp  gl_imgui.cpp  gl_imgui.h  gl_input.cpp  gl_input.h  gl_renderer.cpp  gl_shader.cpp  gl_texture.cpp  gl_vertexarray.cpp  gl_window.cpp  gl_window.h
src/libs/vulkan/: CMakeLists.txt
src/ui/: CMakeLists.txt  README.org
src/ui/include/ethan/: ui.h  ui_pch.h
src/ui/include/ethan/ui/: ui_command.h  ui_container.h  ui_context.h  ui_font.h  ui_io.h  ui_layout.h  ui_macros.h  ui_manager.h  ui_queue.h  ui_storage.h  ui_style.h  ui_types.h  ui_widgets.h  widget.h
src/ui/include/ethan/ui/plugins/: imgui_process.h
src/ui/include/ethan/ui/types/: ui_base.h  ui_color.h  ui_rect.h  ui_types.h
src/ui/include/ethan/ui/widgets/: ui_button.h  ui_window.h
src/ui/src/: ui_command.cpp  ui_container.cpp  ui_context.cpp  ui_font.cpp  ui_io.cpp  ui_layout.cpp  ui_manager.cpp  ui_queue.cpp  ui_storage.cpp  ui_style.cpp  ui_types.cpp  widget.cpp
src/ui/src/plugins/: imgui_process.cpp
src/ui/src/types/: ui_base.cpp  ui_rect.cpp  ui_types.cpp
src/ui/src/widgets/: ui_button.cpp  ui_window.cpp
src/utils/: CMakeLists.txt
src/utils/include/ethan/: etpch.h  utils.h  utils_pch.h
src/utils/include/ethan/utils/: utils.h
src/utils/include/ethan/utils/console/: console.h
src/utils/include/ethan/utils/debug/: profiler.h
src/utils/include/ethan/utils/ds/: queue.h  stack.h
src/utils/include/ethan/utils/helper/: pointer_ext.h  string_ext.h
src/utils/include/ethan/utils/misc/: funcs.h  macros.h  types.h
src/utils/include/ethan/utils/os/: file.h  file_system.h
src/utils/include/ethan/utils/time/: delta_time.h  timer.h
src/utils/src/: etpch.cpp
src/utils/src/console/: console.cpp
src/utils/src/debug/: profiler.cpp
src/utils/src/helper/: base_wrappers.cpp  pointer_ext.cpp  string_ext.cpp
src/utils/src/os/: file.cpp  file_system.cpp
src/utils/src/time/: delta_time.cpp  timer.cpp
tests/game/: CMakeLists.txt
tests/game/res/shaders/: basic.glsl  flat_color.glsl
tests/game/src/: example2D.cpp  example2D.h  example_process.cpp  example_process.h  game.cpp  game.h
(+2 files in other folders)
