# ==================================================
#      _____
#   __|___  |__    __    __   _  ____    ____   _
#  |   ___|    | _|  |_ |  |_| ||    \  |    \ | |
#  |   ___|    ||_    _||   _  ||     \ |     \| |
#  |______|  __|  |__|  |__| |_||__|\__\|__/\____|
#     |_____|
#                   Game Engine
# ==================================================
#
# Github : https://github.com/zZnghialamZz/Ethan
# License: MIT License (See LICENSE for details)

# ---
# ThirdParties/CMakeLists.txt

# Utilities
# ---

add_subdirectory(SpdLog)
